--- a/wiki/css/wiki.css
+++ b/wiki/css/wiki.css
@@ -129,3 +129,10 @@ img.logo {
 	width: 80px;
 	height: auto;
 }
+
+.computervm-article-img{
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0.4em auto;
+}
